# demo-project

./: CMakeLists.txt  README.md  env_project.cmake
DemoExe/: CMakeLists.txt
DemoExe/src/: DemoExe.cpp  DemoExe.h
DemoLib/: CMakeLists.txt
DemoLib/include/DemoLib/: DemoLib.h
DemoLib/src/: DemoLib.cpp
build-system/: build-system.cmake  env_global.cmake
